# rurage

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  src.py
.github/workflows/: publish.yml
examples/: example_ensemble.ipynb  example_rurage_ensemble.ipynb  example_rurage_evaluation.ipynb
rurage/: __init__.py  color.py  config.py  ensemble.py  evaluator.py  metrics.py  report.py  tokenizer.py
tests/: test_color.py  test_config.py  test_evaluator.py  test_metrics.py  test_report.py
